fix z-index of views options buttons

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -20,6 +20,7 @@ $pn-prefix: '#{$prefix}pn-';
 $cv-prefix: '#{$prefix}cv-';
 $z-dialog-inline: 10;
 $z-loader: 10;
+$z-views-options-buttons: 5;
 
 $fontFamily: 'Ubuntu', sans-serif;
 
